# vvv3d

./: .gitignore  .gitlab-ci.yml  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  README.md  build-sdl.sh  build.sh  guiobject.cpp  guiobject.h  main.cpp  test.sh  uninstall.sh  vvv3d.pri  vvv3dnew.pro  vvv3dtest.pro  vvvstlhelper.hpp
cmake/: qt_backend.cmake  sdl_backend.cmake
gui/: actionlist.h  align.h  buttonbase.cpp  buttonbase.h  buttontext.cpp  buttontext.h  colorrectanglewidget.cpp  colorrectanglewidget.h  eventtestwidget.cpp  eventtestwidget.h  guilayer.cpp  guilayer.h  guiobject.cpp  guiobject.h  horizontallayout.cpp  horizontallayout.h  imagewidget.cpp  imagewidget.h  layout.cpp  layout.h  lineedit.cpp  lineedit.h  panel.cpp  panel.h  rect.h  textwidget.cpp  textwidget.h  verticallayout.cpp  verticallayout.h  widget.cpp  widget.h
resources/shaders/: basic.fsh  basic.vsh  imagewidget.fsh  imagewidget.vsh  rectanglewidget.fsh  rectanglewidget.vsh  solidcolor.fsh  solidcolor.vsh  solidrect.fsh  solidrect.vsh  sprite.fsh  sprite.vsh  text.fsh  text.vsh
sprites/: sprite.cpp  sprite.h
src/: main.cpp
src/core/: ILayer.h  engine.cpp  engine.h  layeredengine.cpp  layeredengine.h  resourcemanager.h  transform.h
src/graphics/: camera.cpp  camera.h  framebufferobject.cpp  framebufferobject.h  geometry.cpp  iobject.cpp  iobject.h
src/graphics/fonts/: font.cpp  font.h  textline.cpp  textline.h
src/graphics/lowlevel/: lowlevelbuffer.cpp  lowlevelbuffer.h  lowlevelgeometry.cpp  lowlevelgeometry.h  lowlevelshader.cpp  lowlevelshader.h  lowlevelshaderprogram.cpp  lowlevelshaderprogram.h  lowleveltexture.cpp  lowleveltexture.h  openglprovider.h
src/graphics/shaders/: shader.cpp  shader.h
src/graphics/textures/: texture.cpp  texture.h  textureatlas.cpp  textureatlas.h  texturemanager.cpp  texturemanager.h  texturepacker.cpp  texturepacker.h
src/std/: draw.cpp  draw.h  sprite.cpp  sprite.h  spritelayer.cpp  spritelayer.h
src/utils/: helper.cpp  helper.h  myutils.cpp  myutils.h
src/vvvmath/: matrix33.h  polynomial.h  quaternion.h
tests/: CMakeLists.txt  main.cpp  test_animation.cpp  test_color.cpp  test_transform.cpp  vvv3dfixture.cpp  vvv3dfixture.hpp
vvv3d/: vvv3d.h  vvv3d.hpp  vvv3dgui.h  vvv3dgui.hpp
vvv3d/core/: camera.cpp  camera.h  camera.hpp  engine.cpp  engine.h  engine.hpp  gluthal.cpp  gluthal.h  hal.cpp  hal.h  hal.hpp  input.cpp  input.h  input.hpp  inputevent.h  inputevent.hpp  resourcemanager.h  resourcemanager.hpp  sdllayer.cpp  sdllayer.h  sdllayer.hpp  time.hpp  transform.cpp  transform.h  transform.hpp  viewport.cpp  viewport.hpp
vvv3d/core/graphics/: color.cpp  color.h  color.hpp  colour.cpp  colour.h  framebufferobject.cpp  framebufferobject.h  framebufferobject.hpp  geometry.cpp  geometry.h  geometry.hpp  material.cpp  material.hpp
vvv3d/core/hal/: display_properties.hpp  hal.cpp  hal.hpp
vvv3d/geometries/: cube.cpp  quad.hpp
vvv3d/gui/: actionlist.hpp  actionmap.hpp  buttonbase.h  gui_layer_base.cpp  layout.cpp  lineedit.h  panel.h  rect.h  rect.hpp
vvv3d/gui/properties/: iaction.cpp  iaction.hpp  iautoresize.hpp  iborder.hpp  icolor.hpp  icontainer.hpp  icursorcolor.hpp  iexpand.hpp  ifont.hpp  ihalign.hpp  iimage.hpp  irange.hpp  ishader.hpp  ivalign.hpp  ivalue.hpp
vvv3d/gui/widgetindex/: gui_layer.cpp  gui_layer.hpp  property_mapper.hpp  standard_properties.cpp  standard_widget_fabrics.cpp  standard_widget_fabrics.hpp  widget_fabric.cpp  widget_fabric.hpp  widget_property_mapper.cpp  widget_property_mapper.hpp
vvv3d/gui/widgets/: activewidget.cpp  activewidget.hpp  buttonbase.hpp  buttontext.cpp  colorrectanglewidget.cpp  colorrectanglewidget.hpp  eventtestwidget.cpp  eventtestwidget.hpp  horizontallayout.hpp  hslider.cpp  hslider.hpp  imagewidget.cpp  imagewidget.hpp  layout.cpp  layout.hpp  lineedit.hpp  panel.cpp  panel.hpp  sliderh.cpp  textwidget.hpp  verticallayout.hpp  widget.cpp  widget.hpp
vvv3d/lighting/: light.hpp
vvv3d/private/fc_systemfonts_impl/: fc_systemfonts_impl.cpp  fc_systemfonts_impl.hpp
vvv3d/private/freetype_font_impl/: freetype_font_impl.cpp  freetype_font_impl.hpp  mgrfreetype.cpp  mgrfreetype.hpp
vvv3d/private/qt_hal_impl/: qt_font_impl.cpp  qt_font_impl.h  qthallayer.cpp  qthallayer.hpp  qtinput.cpp  qtinput.hpp  qtopenglprovider.cpp  qtopenglprovider.hpp  qtopenglwindow.cpp  qtopenglwindow.h
vvv3d/private/sdl_hal_impl/: sdllayer.cpp  sdllayer.hpp
vvv3d/sprites/: animation.hpp  animationplayer.cpp  sprite.cpp
vvv3d/std/: draw.cpp  draw.h  draw.hpp  log.cpp  log.hpp  text.cpp  text.hpp  texture_io.cpp  texture_io.hpp
vvv3d/std/geometries/: cube.cpp  cube.hpp  quad.cpp  (+1 more)
vvv3d/utils/: fabric.hpp  helper.cpp  helper.h  helper.hpp  log.cpp  log.hpp  myutils.cpp  myutils.h  myutils.hpp  property_mapper.hpp  property_mapper_dependencies.hpp  text.cpp  text.hpp  utf8string.hpp
vvv3d/vvvmath/: functions.hpp  linalg.h  linalg.hpp  mathconstants.h  mathconstants.hpp  matrices_types.h  matrices_types.hpp  matrix33.h  matrix33.hpp  matrix44.h  matrix44.hpp  polynomial.hpp  quaternion.h  quaternion.hpp  vector2.h  vector2.hpp  vector3.h  vector3.hpp  vector4.h  vector4.hpp
(+204 files in other folders)
